[gd_scene load_steps=6 format=2]

[ext_resource path="res://icons/tick_icon.svg" type="Texture" id=1]
[ext_resource path="res://fonts/res/popup_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/bin_icon.svg" type="Texture" id=3]
[ext_resource path="res://ui/options_keep_video_dialog.gd" type="Script" id=4]
[ext_resource path="res://fonts/res/default_italic.tres" type="DynamicFont" id=5]

[node name="OptionsKeepVideoDialog" type="PopupPanel"]
margin_right = 640.0
margin_bottom = 360.0
popup_exclusive = true
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 14
custom_constants/margin_left = 14

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 14.0
margin_right = 618.0
margin_bottom = 352.0

[node name="LabelContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 98.0
margin_right = 604.0
margin_bottom = 214.0
size_flags_vertical = 6
custom_constants/separation = 18

[node name="StatementLabel" type="Label" parent="MarginContainer/MainContainer/LabelContainer"]
margin_right = 604.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "New video settings have been applied."
align = 1
autowrap = true

[node name="QuestionLabel" type="Label" parent="MarginContainer/MainContainer/LabelContainer"]
margin_top = 48.0
margin_right = 604.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Would you like to keep these new settings?"
align = 1
autowrap = true

[node name="CountdownLabel" type="Label" parent="MarginContainer/MainContainer/LabelContainer"]
margin_top = 96.0
margin_right = 604.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
align = 1
autowrap = true

[node name="OptionContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 316.0
margin_right = 604.0
margin_bottom = 352.0

[node name="DiscardButton" type="Button" parent="MarginContainer/MainContainer/OptionContainer"]
margin_left = 90.0
margin_right = 210.0
margin_bottom = 36.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Discard"
icon = ExtResource( 3 )
expand_icon = true

[node name="KeepButton" type="Button" parent="MarginContainer/MainContainer/OptionContainer"]
margin_left = 404.0
margin_right = 504.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Keep"
icon = ExtResource( 1 )
expand_icon = true

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="about_to_show" from="." to="." method="_on_OptionsKeepVideoDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OptionsKeepVideoDialog_popup_hide"]
[connection signal="pressed" from="MarginContainer/MainContainer/OptionContainer/DiscardButton" to="." method="_on_DiscardButton_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/OptionContainer/KeepButton" to="." method="_on_KeepButton_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
